Changelog
=========

1.15 - Unreleased
-----------------

* Fix ``OSError: [Errno 10] No child processes`` errors in Python 2.4 and 2.5.
  (Issue #12)
  [fschulze]

* Fix CVS update.
  [sargo]

1.14 - 2010-05-15
-----------------

* Added bzr support.
  [tseaver]

* Added git branch support.
  [shywolf9982, fschulze]

1.13 - 2010-04-11
-----------------

* Tell the user which packages are queued for update or checkout, so one can
  check which packages are still updating now that the output is only printed
  after everything is done due to parallel checkouts.
  [fschulze]

* Added ``always-accept-server-certificate`` option. When set in the
  ``[buildout]`` section, then invalid certificates are always accepted for
  subversion repositories.
  [fschulze]

* Added ``-v``/``--version`` option.
  [tomster, fschulze]

* Use the much nicer argparse library instead of optparse.
  [fschulze]

1.12 - 2010-03-15
-----------------

* Fix svn checkout.
  [fschulze]

1.11 - 2010-03-14
-----------------

* Handle untrusted server certificates by asking the user what to do.
  [fschulze]

* Properly handle user input for authorization by using locks to prevent
  problems with parallel checkouts.
  [fschulze]

* Only checkout/update packages in auto-checkout or with ``update = true``
  option when running buildout.
  [fschulze]

1.10 - 2010-02-06
-----------------

* Don't store the buildout options if they contain a command.
  [fschulze]

* Basic support for buildout offline mode (-o). Not all cases are handled yet.
  [fschulze]

* Added ``full-path`` package option.
  [fschulze]

* Added ``egg`` package option (Issue #6).
  [fschulze]

* By setting ``always-checkout = force``, all packages will be updated
  without asking when dirty.
  [fschulze]

* The ``[path]`` part of sources is replaced by ``path=PATH`` syntax and
  throws a warning when used.
  [fschulze]

* Per package options are now allowed before the URL.
  [fschulze]
